# wifi_lib

./: Android.mk  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  core  main.c
head/: control_wifi.h
source/: Android.mk  control_wifi  control_wifi.c  main.c
src/: .control_wifi.c.swp  .control_wifi.h.swp  Android.mk  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  control_wifi.c  control_wifi.c~  control_wifi.h  control_wifi.h~  main.c
